@@ -111,7 +111,7 @@ read_STRING_LITERAL_LONG(SerdReader* const reader,
         skip_byte(reader, q3);
         break;
       }
-      ref->flags |= SERD_HAS_QUOTE;
+
       if (!(st = push_byte(reader, ref, c))) {
         st = read_character(reader, ref, (uint8_t)q2);
       }
@@ -146,7 +146,10 @@ read_String(SerdReader* const reader, SerdNode* const node)
     return SERD_SUCCESS;
   }
 
+  // Long string
   skip_byte(reader, q3);
+  node->flags |= SERD_IS_LONG;
+
   return read_STRING_LITERAL_LONG(reader, node, (uint8_t)q1);
 }
 
