@@ -1,16 +1,10 @@
 // Copyright 2011-2020 David Robillard <d@drobilla.net>
 // SPDX-License-Identifier: ISC
 
-#include "string_utils.h"
-
 #include "serd/memory.h"
-#include "serd/node.h"
 #include "serd/status.h"
-#include "serd/string.h"
 
-#include <assert.h>
 #include <stdlib.h>
-#include <string.h>
 
 void
 serd_free(void* const ptr)
@@ -55,51 +49,4 @@ serd_strerror(const SerdStatus status)
   }
 
   return "Unknown error";
-}
-
-static void
-serd_update_flags(const char c, SerdNodeFlags* const flags)
-{
-  switch (c) {
-  case '\r':
-  case '\n':
-    *flags |= SERD_HAS_NEWLINE;
-    break;
-  case '"':
-    *flags |= SERD_HAS_QUOTE;
-    break;
-  default:
-    break;
-  }
-}
-
-size_t
-serd_substrlen(const char* const    str,
-               const size_t         len,
-               SerdNodeFlags* const flags)
-{
-  assert(flags);
-
-  size_t i = 0;
-  *flags   = 0;
-  for (; i < len && str[i]; ++i) {
-    serd_update_flags(str[i], flags);
-  }
-
-  return i;
-}
-
-size_t
-serd_strlen(const char* const str, SerdNodeFlags* const flags)
-{
-  if (flags) {
-    size_t i = 0;
-    *flags   = 0;
-    for (; str[i]; ++i) {
-      serd_update_flags(str[i], flags);
-    }
-    return i;
-  }
-
-  return strlen(str);
 }
