@@ -4,8 +4,6 @@
 #ifndef SERD_SRC_STRING_UTILS_H
 #define SERD_SRC_STRING_UTILS_H
 
-#include "serd/node.h"
-
 #include <stdbool.h>
 #include <stddef.h>
 #include <stdint.h>
@@ -76,9 +74,6 @@ is_windows_path(const char* path)
   return is_alpha(path[0]) && (path[1] == ':' || path[1] == '|') &&
          (path[2] == '/' || path[2] == '\\');
 }
-
-size_t
-serd_substrlen(const char* str, size_t len, SerdNodeFlags* flags);
 
 static inline char
 serd_to_upper(const char c)
