@@ -156,8 +156,10 @@ test_expand_bad_uri_datatype(void)
 {
   const SerdStringView type = serd_string("Type");
 
-  SerdNode* const typed = serd_new_typed_literal(serd_string("data"), type);
-  SerdEnv* const  env   = serd_env_new(serd_empty_string());
+  SerdNode* const typed =
+    serd_new_literal(serd_string("data"), SERD_HAS_DATATYPE, type);
+
+  SerdEnv* const env = serd_env_new(serd_empty_string());
 
   assert(!serd_env_expand_node(env, typed));
 
