@@ -74,8 +74,8 @@ check_get_boolean(const char* string,
                   const char* datatype_uri,
                   const bool  expected)
 {
-  SerdNode* const node =
-    serd_new_typed_literal(serd_string(string), serd_string(datatype_uri));
+  SerdNode* const node = serd_new_literal(
+    serd_string(string), SERD_HAS_DATATYPE, serd_string(datatype_uri));
 
   assert(node);
   assert(serd_get_boolean(node) == expected);
@@ -161,8 +161,8 @@ check_get_double(const char*  string,
                  const char*  datatype_uri,
                  const double expected)
 {
-  SerdNode* const node =
-    serd_new_typed_literal(serd_string(string), serd_string(datatype_uri));
+  SerdNode* const node = serd_new_literal(
+    serd_string(string), SERD_HAS_DATATYPE, serd_string(datatype_uri));
 
   assert(node);
 
@@ -190,8 +190,8 @@ test_get_double(void)
   assert(isnan(serd_get_double(nan)));
   serd_node_free(nan);
 
-  SerdNode* const invalid =
-    serd_new_typed_literal(serd_string("!invalid"), serd_string(NS_XSD "long"));
+  SerdNode* const invalid = serd_new_literal(
+    serd_string("!invalid"), SERD_HAS_DATATYPE, serd_string(NS_XSD "long"));
 
   assert(isnan(serd_get_double(invalid)));
   serd_node_free(invalid);
@@ -234,8 +234,8 @@ check_get_float(const char* string,
                 const char* datatype_uri,
                 const float expected)
 {
-  SerdNode* const node =
-    serd_new_typed_literal(serd_string(string), serd_string(datatype_uri));
+  SerdNode* const node = serd_new_literal(
+    serd_string(string), SERD_HAS_DATATYPE, serd_string(datatype_uri));
 
   assert(node);
 
@@ -261,8 +261,8 @@ test_get_float(void)
   assert(isnan(serd_get_float(nan)));
   serd_node_free(nan);
 
-  SerdNode* const invalid =
-    serd_new_typed_literal(serd_string("!invalid"), serd_string(NS_XSD "long"));
+  SerdNode* const invalid = serd_new_literal(
+    serd_string("!invalid"), SERD_HAS_DATATYPE, serd_string(NS_XSD "long"));
 
   assert(isnan(serd_get_double(invalid)));
 
@@ -299,8 +299,8 @@ check_get_integer(const char*   string,
                   const char*   datatype_uri,
                   const int64_t expected)
 {
-  SerdNode* const node =
-    serd_new_typed_literal(serd_string(string), serd_string(datatype_uri));
+  SerdNode* const node = serd_new_literal(
+    serd_string(string), SERD_HAS_DATATYPE, serd_string(datatype_uri));
 
   assert(node);
   assert(serd_get_integer(node) == expected);
@@ -363,8 +363,8 @@ check_get_base64(const char* string,
                  const char* datatype_uri,
                  const char* expected)
 {
-  SerdNode* const node =
-    serd_new_typed_literal(serd_string(string), serd_string(datatype_uri));
+  SerdNode* const node = serd_new_literal(
+    serd_string(string), SERD_HAS_DATATYPE, serd_string(datatype_uri));
 
   assert(node);
 
@@ -389,8 +389,8 @@ test_get_base64(void)
   check_get_base64("Zm9vYg==", NS_XSD "base64Binary", "foob");
   check_get_base64(" \f\n\r\t\vZm9v \f\n\r\t\v", NS_XSD "base64Binary", "foo");
 
-  SerdNode* const node = serd_new_typed_literal(
-    serd_string("Zm9v"), serd_string(NS_XSD "base64Binary"));
+  SerdNode* const node = serd_new_literal(
+    serd_string("Zm9v"), SERD_HAS_DATATYPE, serd_string(NS_XSD "base64Binary"));
 
   char                  small[2] = {0};
   const SerdWriteResult r        = serd_get_base64(node, sizeof(small), small);
@@ -424,7 +424,7 @@ test_node_from_string(void)
 {
   SerdNode* const hello = serd_new_string(serd_string("hello\""));
   assert(serd_node_length(hello) == 6);
-  assert(serd_node_flags(hello) == SERD_HAS_QUOTE);
+  assert(!serd_node_flags(hello));
   assert(!strncmp(serd_node_string(hello), "hello\"", 6));
   serd_node_free(hello);
 }
@@ -434,7 +434,7 @@ test_node_from_substring(void)
 {
   SerdNode* const a_b = serd_new_string(serd_substring("a\"bc", 3));
   assert(serd_node_length(a_b) == 3);
-  assert(serd_node_flags(a_b) == SERD_HAS_QUOTE);
+  assert(!serd_node_flags(a_b));
   assert(strlen(serd_node_string(a_b)) == 3);
   assert(!strncmp(serd_node_string(a_b), "a\"b", 3));
   serd_node_free(a_b);
@@ -453,46 +453,54 @@ check_copy_equals(const SerdNode* const node)
 static void
 test_literal(void)
 {
+  const SerdStringView hello_str = serd_string("hello");
+  const SerdStringView empty_str = serd_empty_string();
+
+  assert(!serd_new_literal(
+    hello_str, SERD_HAS_DATATYPE | SERD_HAS_LANGUAGE, serd_string("whatever")));
+
+  assert(!serd_new_literal(hello_str, SERD_HAS_DATATYPE, empty_str));
+  assert(!serd_new_literal(hello_str, SERD_HAS_LANGUAGE, empty_str));
+
+  assert(!serd_new_literal(hello_str, SERD_HAS_DATATYPE, serd_string("Type")));
+  assert(!serd_new_literal(hello_str, SERD_HAS_DATATYPE, serd_string("de")));
+
+  assert(!serd_new_literal(hello_str, SERD_HAS_LANGUAGE, serd_string("3n")));
+  assert(!serd_new_literal(hello_str, SERD_HAS_LANGUAGE, serd_string("d3")));
+  assert(!serd_new_literal(hello_str, SERD_HAS_LANGUAGE, serd_string("d3")));
+  assert(!serd_new_literal(hello_str, SERD_HAS_LANGUAGE, serd_string("en-!")));
+
   SerdNode* hello2 = serd_new_string(serd_string("hello\""));
 
   assert(serd_node_length(hello2) == 6 &&
-         serd_node_flags(hello2) == SERD_HAS_QUOTE &&
          !strcmp(serd_node_string(hello2), "hello\""));
 
   check_copy_equals(hello2);
 
-  SerdNode* hello3 =
-    serd_new_plain_literal(serd_string("hello\""), serd_empty_string());
+  assert(!serd_new_literal(
+    serd_string("plain"), SERD_HAS_DATATYPE, serd_string(NS_RDF "langString")));
 
-  assert(serd_node_equals(hello2, hello3));
-
-  SerdNode* hello4 =
-    serd_new_typed_literal(serd_string("hello\""), serd_empty_string());
-
-  assert(!serd_new_typed_literal(serd_string("plain"),
-                                 serd_string(NS_RDF "langString")));
-
-  assert(serd_node_equals(hello4, hello2));
-
-  serd_node_free(hello4);
-  serd_node_free(hello3);
   serd_node_free(hello2);
 
-  const char* lang_lit_str    = "\"Hello\"@en";
-  SerdNode*   sliced_lang_lit = serd_new_plain_literal(
-    serd_substring(lang_lit_str + 1, 5), serd_substring(lang_lit_str + 8, 2));
+  const char* lang_lit_str = "\"Hello\"@en-ca";
+  SerdNode*   sliced_lang_lit =
+    serd_new_literal(serd_substring(lang_lit_str + 1, 5),
+                     SERD_HAS_LANGUAGE,
+                     serd_substring(lang_lit_str + 8, 5));
 
   assert(!strcmp(serd_node_string(sliced_lang_lit), "Hello"));
 
   const SerdNode* const lang = serd_node_language(sliced_lang_lit);
   assert(lang);
-  assert(!strcmp(serd_node_string(lang), "en"));
+  assert(!strcmp(serd_node_string(lang), "en-ca"));
   check_copy_equals(sliced_lang_lit);
   serd_node_free(sliced_lang_lit);
 
-  const char* type_lit_str    = "\"Hallo\"^^<http://example.org/Greeting>";
-  SerdNode*   sliced_type_lit = serd_new_typed_literal(
-    serd_substring(type_lit_str + 1, 5), serd_substring(type_lit_str + 10, 27));
+  const char* type_lit_str = "\"Hallo\"^^<http://example.org/Greeting>";
+  SerdNode*   sliced_type_lit =
+    serd_new_literal(serd_substring(type_lit_str + 1, 5),
+                     SERD_HAS_DATATYPE,
+                     serd_substring(type_lit_str + 10, 27));
 
   assert(!strcmp(serd_node_string(sliced_type_lit), "Hallo"));
 
@@ -500,11 +508,6 @@ test_literal(void)
   assert(datatype);
   assert(!strcmp(serd_node_string(datatype), "http://example.org/Greeting"));
   serd_node_free(sliced_type_lit);
-
-  SerdNode* const plain_lit =
-    serd_new_plain_literal(serd_string("Plain"), serd_empty_string());
-  assert(!strcmp(serd_node_string(plain_lit), "Plain"));
-  serd_node_free(plain_lit);
 }
 
 static void
@@ -523,17 +526,17 @@ test_compare(void)
   SerdNode* xsd_short =
     serd_new_uri(serd_string("http://www.w3.org/2001/XMLSchema#short"));
 
-  SerdNode* angst =
-    serd_new_plain_literal(serd_string("angst"), serd_empty_string());
+  SerdNode* angst = serd_new_string(serd_string("angst"));
 
-  SerdNode* angst_de =
-    serd_new_plain_literal(serd_string("angst"), serd_string("de"));
+  SerdNode* angst_de = serd_new_literal(
+    serd_string("angst"), SERD_HAS_LANGUAGE, serd_string("de"));
 
-  SerdNode* angst_en =
-    serd_new_plain_literal(serd_string("angst"), serd_string("en"));
+  assert(angst_de);
+  SerdNode* angst_en = serd_new_literal(
+    serd_string("angst"), SERD_HAS_LANGUAGE, serd_string("en"));
 
-  SerdNode* hallo =
-    serd_new_plain_literal(serd_string("Hallo"), serd_string("de"));
+  SerdNode* hallo = serd_new_literal(
+    serd_string("Hallo"), SERD_HAS_LANGUAGE, serd_string("de"));
 
   SerdNode* hello         = serd_new_string(serd_string("Hello"));
   SerdNode* universe      = serd_new_string(serd_string("Universe"));
