@@ -83,8 +83,11 @@ test_writer(const char* const path)
   const SerdStringView en       = serd_string("en");
 
   SerdNode* const o = serd_new_string(serd_string("o"));
-  SerdNode* const t = serd_new_typed_literal(serd_string("t"), urn_Type);
-  SerdNode* const l = serd_new_plain_literal(serd_string("l"), en);
+
+  SerdNode* const t =
+    serd_new_literal(serd_string("t"), SERD_HAS_DATATYPE, urn_Type);
+
+  SerdNode* const l = serd_new_literal(serd_string("l"), SERD_HAS_LANGUAGE, en);
 
   const SerdNode* good[][3] = {{s, p, o}, {s, p, t}, {s, p, l}};
 
