@@ -4,25 +4,10 @@
 #undef NDEBUG
 
 #include "serd/attributes.h"
-#include "serd/node.h"
 #include "serd/status.h"
-#include "serd/string.h"
 
 #include <assert.h>
-#include <stdint.h>
-#include <stdio.h>
 #include <string.h>
-
-static void
-test_strlen(void)
-{
-  const uint8_t str[] = {'"', '5', 0xE2, 0x82, 0xAC, '"', '\n', 0};
-
-  SerdNodeFlags flags   = 0;
-  size_t        n_bytes = serd_strlen((const char*)str, &flags);
-  assert(n_bytes == 7 && flags == (SERD_HAS_QUOTE | SERD_HAS_NEWLINE));
-  assert(serd_strlen((const char*)str, NULL) == 7);
-}
 
 static void
 test_strerror(void)
@@ -42,9 +27,7 @@ SERD_PURE_FUNC
 int
 main(void)
 {
-  test_strlen();
   test_strerror();
 
-  printf("Success\n");
   return 0;
 }
